--- a/Swift-libpd-example/Base.lproj/Main.storyboard
+++ b/Swift-libpd-example/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Swift_libpd_example" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,7 +20,30 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LfK-fp-uKG">
+                                <rect key="frame" x="141" y="318" width="93" height="30"/>
+                                <state key="normal" title="trigger sound"/>
+                                <connections>
+                                    <action selector="triggerButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="6l4-gF-KWh"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="C4f-DM-HPN">
+                                <rect key="frame" x="137" y="372" width="102" height="30"/>
+                                <state key="normal" title="trigger sound2"/>
+                                <connections>
+                                    <action selector="trigger2ButtonAction:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LM7-BP-KFf"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="C4f-DM-HPN" firstAttribute="top" secondItem="LfK-fp-uKG" secondAttribute="bottom" constant="24" id="3fG-lv-aTD"/>
+                            <constraint firstItem="LfK-fp-uKG" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="YDM-4e-qdZ"/>
+                            <constraint firstItem="LfK-fp-uKG" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="298" id="YOI-Te-L6M"/>
+                            <constraint firstItem="LfK-fp-uKG" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="hEq-fl-usi"/>
+                            <constraint firstItem="C4f-DM-HPN" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="ojq-gq-2Jt"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
